# nuc_ros

./: CMakeLists.txt  README.md  package.xml
include/nuc/: nuc.h
launch/: demo.launch
msg/: MeshWithFrame.msg
scripts/: demo.py
src/: nuc.cpp  nuc_node.cpp
srv/: GetNuc.srv
