<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>nuc</name>
    <version>0.0.1</version>
    <description>

        This package contains the supplementary code for the journal paper entitled "Template-free Non-revisiting Uniform Coverage Path Planning on Curved Surfaces", IEEE/ASME Transactions on Mechatronics (T-Mech).

    </description>
    <author>Tong Yang</author>
    <author>t.yang22@imperial.ac.uk</author>
    <maintainer email="t.yang22@imperial.ac.uk">Tong Yang</maintainer>
    <license>GPL3.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <!-- <build_depend>shape_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
     -->

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>shape_msgs</depend>
    <depend>nav_msgs</depend>

    <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->
    <!-- <depend>shape_msgs</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend> -->

</package>